tests/NormalTests/paczka1/small_fuzzy/82027192.err
Error in line 1: S6 A329 75,5
Error in line 3: w7THRh A329 89,8
Error in line 9: S6 S628 95,7
Error in line 13: S6 S628 219,2
Error in line 14: S6 S628 79,1
Error in line 12: vbsWOWKF13l A329 41,3
